refactor: removing comments